# interactive_voronoi

./: CMakeLists.txt  README.md
include/: centroid.h  centroid_list.h  color.h  gui.h  point.h  point_list.h
src/: centroid_list.c  color.c  gui.c  main.c  point.c  point_list.c  test_centroid_list.c
